docs/tests/typing/bad/testfile-arith-5.cpp

int main() { int *p; 1-p; }

